--- a/front/package.json
+++ b/front/package.json
@@ -11,18 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@hookform/resolvers": "^1.3.4",
     "@loadable/component": "^5.14.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "axios": "^0.21.1",
     "clean-webpack-plugin": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "swr": "^0.4.2",
     "ts-node": "^9.1.1",
-    "webpack": "^5.23.0"
+    "webpack": "^5.23.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
