--- a/front/package.json
+++ b/front/package.json
@@ -14,9 +14,11 @@
     "@hookform/resolvers": "^1.3.4",
     "@loadable/component": "^5.14.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/gravatar": "^1.8.1",
     "axios": "^0.21.1",
     "clean-webpack-plugin": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
+    "gravatar": "^1.8.1",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.8",
     "react": "^17.0.1",
