--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,9 @@
     "@hookform/resolvers": "^1.3.4",
     "@loadable/component": "^5.14.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/gravatar": "^1.8.1",
+    "autosize": "^4.0.2",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "gravatar": "^1.8.1",
@@ -26,6 +27,7 @@
     "react-hook-form": "^6.15.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "socket.io-client": "^2.4.0",
     "swr": "^0.4.2",
     "ts-node": "^9.1.1",
     "webpack": "^5.23.0",
@@ -36,6 +38,9 @@
     "@babel/preset-env": "^7.12.17",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.17",
+    "@types/autosize": "^3.0.7",
+    "@types/classnames": "^2.2.11",
+    "@types/gravatar": "^1.8.1",
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/loadable__component": "^5.13.3",
     "@types/mini-css-extract-plugin": "^1.2.2",
@@ -44,6 +49,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^1.4.35",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
