--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.8",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-router": "^5.2.0",
@@ -46,6 +47,7 @@
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^17.0.1",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
