[c]: DirectMessage page - DirectMessage   - 메시지 보내기 및 소켓으로 DM 받기 - ChatList   - setSize로 page 파라미터 조절   - infinitScroll 할 때 스크롤 위치 유지 - Chat   - regexify-string로 정규표현식 사용하여 태그 및 줄바꿈 태그 대체 - useInput   - 타입 재 지정

--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
+    "dayjs": "^1.10.4",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "gravatar": "^1.8.1",
     "html-webpack-plugin": "^5.2.0",
@@ -26,8 +27,10 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
+    "react-mentions": "^4.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "regexify-string": "^1.0.5",
     "socket.io-client": "^2.4.0",
     "swr": "^0.4.2",
     "ts-node": "^9.1.1",
@@ -49,6 +52,7 @@
     "@types/react": "^17.0.2",
     "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^17.0.1",
+    "@types/react-mentions": "^4.1.0",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^1.4.35",
